# public_CB-GCS

./: .gitignore  LICENSE  README.md  ani.py  fractional_solution.py  generate_linear_obstacles.py  generate_timesteps_convex_sets.py  linear_solver.py  merge_sets.py  neighbor_checker.py  obstacle_position.py  opts.py  polygon_generator.py  polygonal_convex_sets.py  pyproject.toml  rectangle_sets.py  relax_GCS.py  vizSol.py
cbs/: conflict.py  expr.py  gcs_adapter.py  gcs_graph.py  gen.py  plot.py  search.py  testcases.py  type_stubs.py  utils.py
