[project]
name = "cb-gcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gurobipy>=12.0.2",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "rtree>=1.4.0",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
]
